1. refactor the codes about visualization 2. add k/consistency selection 3. add weighted ensemble

--- a/Conf/logger.conf
+++ b/Conf/logger.conf
@@ -6,12 +6,12 @@ level=DEBUG
 handlers=hand01,hand02
 
 [logger_logger01]
-handlers=hand01,hand02
+handlers=hand01,hand02,hand03
 qualname=logger01
 propagate=0
 
 [handlers]
-keys=hand01,hand02
+keys=hand01,hand02,hand03
 
 [handler_hand01]
 class=StreamHandler
@@ -25,9 +25,18 @@ level=DEBUG
 formatter=form01
 args=('clustering.log', 'a')
 
+[handler_hand03]
+class=FileHandler
+level=DEBUG
+formatter=form02
+args=('without_time_log.log', 'a')
+
 [formatters]
-keys=form01
+keys=form01,form02
 
 [formatter_form01]
 format=%(asctime)s %(filename)s[line:%(lineno)d] %(levelname)s %(message)s
 datefmt=%a, %d %b %Y %H:%M:%S
+
+[formatter_form02]
+format=%(message)s
